<resources>
    <string name="app_name">ENROLLMENT_PORTAL</string>
    <string name="semester">SEMESTER</string>
    <string name="view_all">VIEW ALL</string>
    <string name="submit">SUBMIT</string>
    <string name="dept">DEPT</string>
    <string name="cgpa">CGPA</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="first_name">FIRST NAME</string>
    <string name="fee_receipt_due">FEE(RECEIPT#/DUE)</string>
    <string name="last_name">LAST NAME</string>
    <string name="gender">GENDER</string>
    <string name="roll_no">Roll no.</string>
    <string name="search">Search</string>
    <string name="go_to_search_page">Go to Search page</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="update">Update!</string>
    <string name="textview">TextView</string>
    <string name="search_with_rollno">Search with Rollno</string>
    <string name="title_activity_delete">Delete</string>
    <string name="search_with_keyword">Search with Keyword</string>
    <string name="keyword">Keyword</string>
    <string name="ksearch">keysearch</string>
    <string name="title_activity_menu">Menu</string>
    <string name="enroll">Enroll</string>
    <string name="delete_record">Delete Record</string>
    <string name="update_record">Update Record</string>
    <string name="menu">Menu</string>
    <string name="title_activity_login">Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="title_activity_menu_student">MenuStudent</string>
    <string name="roll_number">ROLL NUMBER</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="title_activity_fees">"Fees "</string>
    <string name="title_activity_insert_faculty">Insert Faculty</string>
</resources>
