<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/search_with_rollno"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.018" />

            <EditText
                android:id="@+id/rollsearch"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/roll_no"
                android:inputType="textCapCharacters"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.222" />

            <Button
                android:id="@+id/searchbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="@+id/ScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ScrollView"
                app:layout_constraintVertical_bias="0.304" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_with_keyword"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/keywordsearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/keyword"
                android:inputType="textNoSuggestions|textPersonName"
                android:singleLine="false" />

            <Button
                android:id="@+id/keywordbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ksearch"
                tools:layout_editor_absoluteX="86dp"
                tools:layout_editor_absoluteY="305dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>