<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Menu"
    tools:showIn="@layout/activity_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enroll" />

            <Button
                android:id="@+id/menu_facb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add new faculty record" />

            <Button
                android:id="@+id/viewfacbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View all Faculty" />

            <Button
                android:id="@+id/searchbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <Button
                android:id="@+id/updatebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_record" />

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_record" />

            <Button
                android:id="@+id/feesbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Students with fee due" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/logoutbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="400dp"
        android:text="LOGOUT"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@android:color/holo_blue_light" />

</android.support.constraint.ConstraintLayout>